# destiny

./: .Rbuildignore  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE  NEWS  README.md  ROADMAP  TODO  destiny.Rproj  test-ggplot.r  vignette-patterns.r
R/: RcppExports.R  aaa.r  accessor-generics.r  censoring.r  coercion-methods.r  colorlegend.r  compat.r  cube_helix.r  dataset-helpers.r  destiny-package.r  diffusionmap-coercions.r  diffusionmap-methods-accession.r  diffusionmap-methods-coercion.r  diffusionmap-methods-extraction.r  diffusionmap-methods.r  diffusionmap-plotting.r  diffusionmap.r  dist-matrix-coerce.r  dpt-branching.r  dpt-helpers.r  dpt-methods-matrix.r  dpt-methods.r  dpt-plotting.r  dpt.r  dpt_branching.r  dpt_helpers.r  dpt_methods.r  dpt_plotting.r  eig_decomp.r  expressionset-helpers.r  find_dm_k.r  gene-relevance-methods.r  gene-relevance-plotting-differential-map.r  gene-relevance-plotting-gr-map.r  gene-relevance-plotting-rank.r  gene-relevance-plotting.r  gene-relevance.r  geom-voronoi.r  guo-data.r  knn.r  (+15 more)
data/: guo.rda  guo_norm.rda
demo/: 00Index  destiny.r
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml
inst/: CITATION
man/: DPT-matrix-methods.Rd  DPT-methods.Rd  DPT.Rd  DiffusionMap-accessors.Rd  DiffusionMap-class.Rd  DiffusionMap-coercions.Rd  DiffusionMap-extraction.Rd  DiffusionMap-methods.Rd  ExpressionSet-helpers.Rd  Gene-Relevance-methods.Rd  Gene-Relevance-plotting.Rd  Gene-Relevance.Rd  Sigmas-class.Rd  branchcut.Rd  coercions.Rd  colorlegend.Rd  cube.helix.Rd  data-guo.Rd  (+30 more)
(+93 files in other folders)
